@@ -46,15 +46,19 @@ public class SelectByExampleWithoutBLOBsElementGenerator extends AbstractXmlElem
 
         ibatorContext.getCommentGenerator().addComment(answer);
 
-        StringBuilder sb = new StringBuilder();
-        sb.append("select "); //$NON-NLS-1$
+        answer.addElement(new TextElement("select")); //$NON-NLS-1$
+        XmlElement ifElement = new XmlElement("if"); //$NON-NLS-1$
+        ifElement.addAttribute(new Attribute("test", "distinct")); //$NON-NLS-1$ //$NON-NLS-2$
+        ifElement.addElement(new TextElement("distinct")); //$NON-NLS-1$
+        answer.addElement(ifElement);
 
+        StringBuilder sb = new StringBuilder();
         if (StringUtility.stringHasValue(introspectedTable.getSelectByExampleQueryId())) {
             sb.append('\'');
             sb.append(introspectedTable.getSelectByExampleQueryId());
             sb.append("' as QUERYID,"); //$NON-NLS-1$
+            answer.addElement(new TextElement(sb.toString()));
         }
-        answer.addElement(new TextElement(sb.toString()));
         answer.addElement(getBaseColumnListElement());
 
         sb.setLength(0);
@@ -63,7 +67,7 @@ public class SelectByExampleWithoutBLOBsElementGenerator extends AbstractXmlElem
         answer.addElement((new TextElement(sb.toString())));
         answer.addElement(getExampleIncludeElement());
 
-        XmlElement ifElement = new XmlElement("if"); //$NON-NLS-1$
+        ifElement = new XmlElement("if"); //$NON-NLS-1$
         ifElement
                 .addAttribute(new Attribute("test", "orderByClause != null")); //$NON-NLS-1$ //$NON-NLS-2$
         ifElement
